# vkQuake

./: CMakeLists.txt  meson.build
Quake/: CMakeLists.txt  cdaudio.h  cl_input.c  cl_main.cpp  client.h  cmd.c  cmd.h  common.h  gl_texmgr.h  glquake.h  hash_map.h  image.h  input.h  main_sdl.c  mathlib.h  menu.h  net.h  progs.h  q_sound.h  q_stdinc.h  quakedef.h  screen.h  tasks.h  vid.h  view.h  world.h
cmake/: FindTheora.cmake  FindVorbis.cmake  FindVorbisFile.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt  atomics.h  cd_null.cpp  cfgfile.cpp  cfgfile.cppm  cl_input.cpp  cmd.h  command-impl.cpp  command.cpp  common-impl.cpp  common.cpp  common.cppm  console-impl.cpp  console.cpp  console.cppm  console.h  cvar-impl.cpp  cvar.cpp  cvar.cppm  cvar.h  draw.h  gl_model.h  hash_map-impl.cpp  hash_map.cpp  host.cpp  keys.h  memory-impl-linux.cpp  memory-impl-windows.cpp  memory.cpp  memory.cppm  memory_.cpp  pr_comp.cpp  pr_ext.cpp  progs-cmds.cpp  progs-edict-impl.cpp  progs-exec-impl.cpp  progs-ext.cpp  progs.cpp  q_stdinc.h  quake_stddef.cpp  (+9 more)
